add some more habits

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <div class="habit" data-name="food">🍎</div>
         <div class="habit" data-name="journals">📕</div>
         <div class="habit" data-name="takePills">💊</div>
+        <div class="habit" data-name="sleep">💤</div>
+        <div class="habit" data-name="videoGame">🎮</div>
+        <div class="habit" data-name="programming">💻</div>
       </div>
 
       <div class="days"></div>
